fix wrapping in nav and logo on shrinking viewport

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -23,6 +23,8 @@ header {
             margin: 0 1rem;
             color: $midtoneGray;
             transition: color 0.1s ease-in;
+            min-width: fit-content;
+            white-space: nowrap;
         }
     }
 }
