--- a/src/components/Logo.scss
+++ b/src/components/Logo.scss
@@ -5,4 +5,5 @@ h1.logoBrand {
     font-weight: 500;
     font-family: $fontFamilyPlayfairDisplay;
     color: $darkGray;
+    min-width: fit-content;
 }
